--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,2 @@
-here you can publish your html application
+<h1>Welcome to the micro-SDI</h1>
+<p>The included demo project can be found at <a href="/ows/bees">/ows/bees</a>&nbsp;it exposes WMS, WMTS and WFS.</p>
