update index page with services links

--- a/www/index.html
+++ b/www/index.html
@@ -1,2 +1,6 @@
 <h1>Welcome to the micro-SDI</h1>
-<p>The included demo project can be found at <a href="/ows/bees">/ows/bees</a>&nbsp;it exposes WMS, WMTS and WFS.</p>
+<p>The included demo project can be found at <a href="/ows/bees">/ows/bees</a>&nbsp;it exposes 
+    <a href="/ows/bees?service=WMS&request=GetCapabilities">WMS</a>, 
+    <a href="/ows/bees?service=WMTS&request=GetCapabilities">WMTS</a> and 
+    <a href="/ows/bees?service=WFS&request=GetCapabilities">WFS</a>.</p>
+    <p>It also exposes OGC API Features at <a href="/wfs3/bees/">/wfs3/bees/</a></p>
